--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta name="description"
     content="Obtén el préstamo hipotecario que necesitas con las mejores condiciones y tasas del mercado. Avalamos tu propiedad en 72 horas.">
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="shortcut icon" href="./img/LOGO-ICP_32x32_fondo azul.png" type="image/png">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com"> -->
   <style>
     .gradient-bg {
       background: #183662
