feat: video corporativo

--- a/index.html
+++ b/index.html
@@ -91,9 +91,13 @@
             Más</a>
         </div>
       </div>
-      <div class="md:w-1/2 flex justify-center">
+      <video controls class="w-full rounded-xl shadow-md">
+        <source src="./img/VIDEO_DEA_ICP_WEB.mp4" type="video/mp4">
+        Tu navegador no soporta videos HTML5.
+      </video>
+      <!-- <div class="md:w-1/2 flex justify-center">
         <img src="./img/principal.jpg" alt="Préstamos Hipotecarios" class=" rounded-lg shadow-xl max-w-full h-auto">
-      </div>
+      </div> -->
     </div>
   </section>
 
