--- a/index.html
+++ b/index.html
@@ -91,10 +91,12 @@
             Más</a>
         </div>
       </div>
-      <video controls class="w-full rounded-xl shadow-md">
-        <source src="./img/VIDEO_DEA_ICP_WEB.mp4" type="video/mp4">
-        Tu navegador no soporta videos HTML5.
-      </video>
+      <div class="md:w-1/2 w-full max-w-md mx-auto">
+        <video controls class="w-full rounded-xl shadow-md">
+          <source src="./img/VIDEO_DEA_ICP_WEB.mp4" type="video/mp4">
+          Tu navegador no soporta videos HTML5.
+        </video>
+      </div>
       <!-- <div class="md:w-1/2 flex justify-center">
         <img src="./img/principal.jpg" alt="Préstamos Hipotecarios" class=" rounded-lg shadow-xl max-w-full h-auto">
       </div> -->
