--- a/inversionista/inversionista.html
+++ b/inversionista/inversionista.html
@@ -114,7 +114,7 @@
     </form>
 
 
-    <footer class="bg-blue-900 text-white text-center py-4">
+    <footer class="bg-blue-900 text-white text-center py-4 mt-16">
         © 2025 Intercapital. Todos los derechos reservados.
     </footer>
 
