feat: actualización carrusel

--- a/index.html
+++ b/index.html
@@ -185,25 +185,21 @@
       <div class="swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="./img/Cliente1_junio.png" alt="Cliente 1 feliz"
-              class="rounded-xl shadow w-full h-64 object-contain mx-auto" />
+            <img src="./img/cliente1.png" alt="Cliente 1 feliz" class="rounded-xl shadow w-full h-64 object-cover" />
           </div>
           <div class="swiper-slide">
-            <img src="./img/Cliente2_junio.png" alt="Cliente 2 feliz"
-              class="rounded-xl shadow w-full h-64 object-covers" />
+            <img src="./img/cliente2.png" alt="Cliente 2 feliz" class="rounded-xl shadow w-full h-64 object-cover" />
           </div>
           <div class="swiper-slide">
-            <img src="./img/cliente3_junio.png" alt="Cliente 3 feliz"
-              class="rounded-xl shadow w-full h-64 object-cover" />
+            <img src="./img/cliente3.png" alt="Cliente 3 feliz" class="rounded-xl shadow w-full h-64 object-cover" />
           </div>
           <div class="swiper-slide">
-            <img src="./img/cliente4_junio.png" alt="Cliente 3 feliz"
-              class="rounded-xl shadow w-full h-64 object-cover" />
+            <img src="./img/cliente4.png" alt="Cliente 3 feliz" class="rounded-xl shadow w-full h-64 object-cover" />
           </div>
-          <div class="swiper-slide">
+          <!-- <div class="swiper-slide">
             <img src="./img/cliente5_junio.png" alt="Cliente 3 feliz"
               class="rounded-xl shadow w-full h-64 object-cover" />
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -343,7 +339,7 @@
     </div>
   </section>
 
-  <!-- Form Section -->
+  <!-- FORMULARIO -->
   <section id="contacto" class="py-16 bg-white">
     <div class="container mx-auto px-4">
       <div class="max-w-4xl mx-auto bg-blue-50 rounded-xl p-8 md:p-12 form-shadow">
@@ -408,7 +404,7 @@
     </div>
   </section>
 
-  <!-- FAQ Section -->
+  <!-- PREGUNTAS FRECUENTES -->
   <section class="py-16 bg-gray-50">
     <div class="container mx-auto px-4">
       <h2 class="text-3xl font-bold text-center mb-4 text-blue-900">Preguntas Frecuentes</h2>
@@ -460,12 +456,13 @@
             </svg>
           </button>
           <div class="hidden mt-4 text-gray-600">
-            <p>Sí, todos nuestros préstamos permiten pagos anticipados sin ningún tipo de penalización, dándote la
+            <p>Sí, todos nuestros préstamos permiten pagos anticipados a partir de la tercera cuota sin ningún tipo de
+              penalización, dándote la
               flexibilidad que necesitas en tu plan financiero.</p>
           </div>
         </div>
 
-        <div class="bg-white p-6 rounded-lg shadow">
+        <!-- <div class="bg-white p-6 rounded-lg shadow">
           <button class="flex justify-between items-center w-full text-left group" aria-expanded="false">
             <h3 class="text-lg font-bold text-blue-900 group-aria-expanded:text-blue-700">¿Qué sucede si no puedo
               pagar el préstamo?</h3>
@@ -479,7 +476,7 @@
             <p>Trabajamos contigo para encontrar una solución antes de considerar medidas extremas. Sin embargo,
               en última instancia, la propiedad hipotecada podría ser ejecutada para cubrir el adeudo.</p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -567,7 +564,7 @@
     </div>
   </footer>
 
-  <!-- Success Modal -->
+  <!-- CONFIRMACIÓN DEL FORMULARIO -->
   <div id="success-modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
     <div class="bg-white rounded-xl p-8 max-w-md w-full mx-4">
       <div class="flex justify-center mb-6">
