--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@
         <p class="text-xl mb-8 text-gray-600">Completa tus datos y te contactaremos en minutos para evaluar tu
           crédito.</p>
 
-        <form id="contact-form" action="https://formsubmit.co/velopercode@gmail.com" method="POST" id="contact-form"
-          class="grid md:grid-cols-2 gap-6">
+        <form id="contact-form" action="https://formspree.io/f/intercapitalweb@gmail.com" method="POST"
+          id="contact-form" class="grid md:grid-cols-2 gap-6">
 
           <!-- Seguridad y redirección -->
 
