feat: form actu

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         <p class="text-xl mb-8 text-gray-600">Completa tus datos y te contactaremos en minutos para evaluar tu
           crédito.</p>
 
-        <form id="contact-form" action="https://formspree.io/f/xldlrvgw" method="POST"
+        <form id="contact-form" action="https://formcarry.com/s/MJUI9Pc8xLP" method="POST"
           class="grid md:grid-cols-2 gap-6">
 
           <!-- Seguridad y redirección -->
