--- a/inversionista/inversionista.html
+++ b/inversionista/inversionista.html
@@ -6,32 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Invierte con Nosotros - Intercapital</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="./style-inver.css">
 </head>
 
 <body class="bg-sky-50 text-gray-800">
 
-    <header class="bg-blue-900 text-white py-6">
+    <header class="background text-white py-6">
         <div class="container mx-auto px-4 flex justify-between items-center">
-            <h1 class="text-2xl font-bold">Intercapital</h1>
-            <a href="../index.html" class="hover:underline text-sm">Volver al inicio</a>
+            <a href="../index.html">
+                <img src="../img/Logo ICP Blanco.png" alt="Logo Intercapital" class="w-36">
+            </a>
+
+            <nav class="hidden md:flex items-center space-x-6">
+                <a href="#inver_sec" class="hover:text-sky-200">¿Por qué invertir con
+                    nosotros?</a>
+                <a href="#beneficios" class="hover:text-sky-200">Beneficios</a>
+                <a href="#como-funciona" class="hover:text-sky-200">Proceso</a>
+                <a href="#form_inver"
+                    class="bg-sky-400 text-blue-900 px-4 py-2 font-bold rounded-full hover:bg-sky-200 transition">
+                    Cotiza Ahora
+                </a>
+            </nav>
+
+            <!-- Volver al inicio: visible solo en móviles -->
+            <a href="../index.html" class="md:hidden text-sm hover:underline">Volver al inicio</a>
         </div>
     </header>
 
-    <!-- Hero section - video -->
+    <!-- SECCIÓN HERO - VIDEO INTRODUCTIVO -->
 
     <section class="bg-white py-20">
         <div class="container mx-auto px-6 grid md:grid-cols-2 items-center gap-12">
 
             <!-- Frase impactante -->
             <div>
-                <h1 class="text-4xl md:text-5xl font-bold text-blue-900 leading-tight mb-6">
+                <h1 class="text-5xl md:text-6xl lg:text-7xl font-bold text-blue-900 leading-tight mb-6">
                     Invierte seguro, <br class="hidden md:block" /> crece sin límites.
                 </h1>
-                <p class="text-lg text-gray-600 mb-8">
+                <p class="text-xl md:text-2xl text-gray-600 mb-8">
                     Únete a nuestra comunidad de inversionistas y descubre cómo transformar tus ahorros en patrimonio.
                 </p>
-                <a href="#contacto"
-                    class="inline-block bg-yellow-400 text-blue-900 px-6 py-3 font-bold rounded-full hover:bg-yellow-300 transition">
+                <a href="#form_inver"
+                    class=" bg-sky-400 text-blue-900 px-8 py-4 text-lg font-bold rounded-full hover:bg-sky-200 transition">
                     Comienza a invertir hoy
                 </a>
             </div>
@@ -39,7 +55,7 @@
             <!-- Video local -->
             <div class="rounded-xl overflow-hidden shadow-lg">
                 <video autoplay muted loop playsinline controls class="w-full h-64 md:h-auto object-cover rounded-xl">
-                    <source src="./videos/hero-video.mp4" type="video/mp4" />
+                    <source src="./video/INVERSIONISTA_HERO.mp4" type="video/mp4" />
                     Tu navegador no soporta el video.
                 </video>
             </div>
@@ -50,7 +66,7 @@
 
     <!-- PORQUE INVERTIR CON NOSOTROS -->
 
-    <section class="py-16 bg-white">
+    <section id="inver_sec" class="py-16 bg-white">
         <div class="container mx-auto px-6">
             <h2 class="text-3xl font-bold text-center mb-4 text-blue-900">¿Por qué invertir con nosotros?</h2>
             <p class="text-xl text-center mb-12 text-gray-600 max-w-3xl mx-auto">
@@ -186,7 +202,7 @@
 
     <!-- Formulario  -->
 
-    <form action="https://formsubmit.co/velopercode@gmail.com" method="POST"
+    <form id="form_inver" action="https://formsubmit.co/velopercode@gmail.com" method="POST"
         class="bg-white mt-16 mb-24 p-8 rounded-xl shadow-md max-w-2xl mx-auto">
         <h3 class="text-2xl font-bold text-blue-900 mb-6 text-center">Deja tus datos y te contactamos</h3>
 
@@ -240,7 +256,7 @@
             <div class="grid md:grid-cols-4 gap-8">
                 <div>
                     <div class="flex items-center mb-4">
-                        <img src="./img/Logo ICP Blanco.png" alt="Logo Intercapital" class="h-12 mr-3">
+                        <img src="../img/Logo ICP Blanco.png" alt="Logo Intercapital" class="h-12 mr-3">
                         <!-- <span class="text-xl font-bold">Intercapital Perú</span> -->
                     </div>
                     <p class="text-blue-200">Soluciones hipotecarias confiables para hacer realidad tus proyectos
@@ -275,7 +291,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
                             </svg>
-                            <span>800 123 4567</span>
+                            <span>908 942 105</span>
                         </li>
                         <li class="flex items-center">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24"
@@ -283,7 +299,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                             </svg>
-                            <span>info@finanzhipotecario.com</span>
+                            <span>info@intercapitalperu.com</span>
                         </li>
                         <li class="flex items-center">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24"
@@ -293,7 +309,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
                             </svg>
-                            <span>Av. Principal 123, Ciudad de México</span>
+                            <span>Calle Juan del Carpio 195, San isidro</span>
                         </li>
                     </ul>
                 </div>
