--- a/index.html
+++ b/index.html
@@ -389,7 +389,8 @@
           <div class="flex items-start">
             <input type="checkbox" id="privacidad" name="privacidad" required class="mt-1 h-4 w-4 text-blue-600">
             <label for="privacidad" class="ml-2 text-sm text-gray-700">
-              Acepto la <a href="#" class="text-blue-600 hover:underline">Política de Privacidad</a>*
+              Acepto la <a href="./politica-de-privacidad.html" class="text-blue-600 hover:underline">Política de
+                Privacidad</a>*
             </label>
           </div>
 
@@ -542,7 +543,7 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                   d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
               </svg>
-              <span>info@intercapitalperu.com</span>
+              <span>contactanos@intercapitalperu.com</span>
             </li>
             <li class="flex items-center">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24"
