--- a/inversionista/inversionista.html
+++ b/inversionista/inversionista.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+        content="Invierte con confianza en Intercapital Perú, con respaldo hipotecario y asesoría experta.">
     <title>Invierte con Nosotros - Intercapital</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./style-inver.css">
@@ -76,6 +77,18 @@
             </p>
 
             <div class="grid md:grid-cols-3 gap-8">
+                <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition transform hover:-translate-y-1">
+                    <h3 class="text-xl font-bold mb-3 text-blue-900">Seguridad</h3>
+                    <p class="text-gray-600">Tus inversiones están protegidas por garantías hipotecarias sólidas.</p>
+                </div>
+                <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition transform hover:-translate-y-1">
+                    <h3 class="text-xl font-bold mb-3 text-blue-900">Rentabilidad</h3>
+                    <p class="text-gray-600">Genera ingresos mensuales desde el primer mes.</p>
+                </div>
+                <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition transform hover:-translate-y-1">
+                    <h3 class="text-xl font-bold mb-3 text-blue-900">Transparencia</h3>
+                    <p class="text-gray-600">Acceso a reportes periódicos y contratos claros.</p>
+                </div>
                 <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition transform hover:-translate-y-1">
                     <h3 class="text-xl font-bold mb-3 text-blue-900">Seguridad</h3>
                     <p class="text-gray-600">Tus inversiones están protegidas por garantías hipotecarias sólidas.</p>
@@ -202,48 +215,48 @@
 
     <!-- Formulario  -->
 
-    <form id="form_inver" action="https://formsubmit.co/velopercode@gmail.com" method="POST"
+    <form id="investor-form" action="https://formsubmit.co/velopercode@gmail.com" method="POST"
         class="bg-white mt-16 mb-24 p-8 rounded-xl shadow-md max-w-2xl mx-auto">
         <h3 class="text-2xl font-bold text-blue-900 mb-6 text-center">Deja tus datos y te contactamos</h3>
 
         <!-- seguridad -->
-
         <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_next" value="https://tusitio.com/gracias.html">
         <input type="text" name="_honey" style="display:none">
 
-
         <div class="mb-4">
-            <label class="block text-gray-700 font-semibold mb-2" for="nombre">Nombre completo</label>
-            <input type="text" id="nombre" name="nombre" required
+            <label class="block text-gray-700 font-semibold mb-2" for="nombre_inver">Nombre completo</label>
+            <input type="text" id="nombre_inver" name="nombre" required
                 class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400" />
         </div>
 
         <div class="mb-4">
-            <label class="block text-gray-700 font-semibold mb-2" for="celular">Celular o WhatsApp</label>
-            <input type="tel" id="celular" name="celular" required
+            <label class="block text-gray-700 font-semibold mb-2" for="celular_inver">Celular o WhatsApp</label>
+            <input type="tel" id="celular_inver" name="celular" required
                 class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400" />
         </div>
 
         <div class="mb-4">
-            <label class="block text-gray-700 font-semibold mb-2" for="monto">¿Cuánto deseas invertir?</label>
-            <input type="text" id="monto" name="monto" required
+            <label class="block text-gray-700 font-semibold mb-2" for="monto_inver">¿Cuánto deseas invertir?</label>
+            <input type="text" id="monto_inver" name="monto" required
                 class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400" />
         </div>
 
         <div class="mb-6">
-            <label class="block text-gray-700 font-semibold mb-2" for="opcion">¿En qué deseas invertir?</label>
-            <select id="opcion" name="opcion" required
+            <label class="block text-gray-700 font-semibold mb-2" for="opcion_inver">
+                Indícanos en qué área deseas invertir o recibir asesoría financiera
+            </label>
+            <select id="opcion_inver" name="opcion" required
                 class="w-full border border-gray-300 rounded-lg px-4 py-2 bg-white focus:outline-none focus:ring-2 focus:ring-blue-400">
                 <option value="" disabled selected>Selecciona una opción</option>
-                <option value="invertir">Invertir</option>
-                <option value="hipotecario">Hipotecario</option>
-                <option value="vivienda">Vivienda</option>
-                <option value="vehicular">Vehicular</option>
+                <option value="invertir">Rendimiento con inversión segura</option>
+                <option value="hipotecario">Crédito Hipotecario</option>
+                <option value="vivienda">Compra de Vivienda</option>
+                <option value="vehicular">Financiamiento Vehicular</option>
             </select>
         </div>
 
-        <button type="submit"
+        <button type="submit" id="submit-investor"
             class="w-full bg-yellow-400 text-blue-900 font-bold py-3 rounded-full hover:bg-yellow-300 transition">
             Enviar solicitud
         </button>
